{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 223,
  "lineage": "1eed4796-a544-09b6-3ce6-71d2cb5620e7",
  "resources": [
    {
      "module": "module.cloud_nat[\"us-central1\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:16.231-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/1097684345446/regions/us-central1/routers/dev-fresh-84-router-us-central1",
            "name": "dev-fresh-84-router-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "project": "1097684345446",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/us-central1/routers/dev-fresh-84-router-us-central1"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_nat[\"us-central1\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": true,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "1097684345446/us-central1/dev-fresh-84-router-us-central1/dev-fresh-84-nat-us-central1",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 1024,
            "min_ports_per_vm": 128,
            "name": "dev-fresh-84-nat-us-central1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "1097684345446",
            "region": "us-central1",
            "router": "dev-fresh-84-router-us-central1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_nat.google_compute_router.router",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_nat[\"us-east1\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:27.201-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/1097684345446/regions/us-east1/routers/dev-fresh-84-router-us-east1",
            "name": "dev-fresh-84-router-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "project": "1097684345446",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/us-east1/routers/dev-fresh-84-router-us-east1"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_nat[\"us-east1\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": true,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "1097684345446/us-east1/dev-fresh-84-router-us-east1/dev-fresh-84-nat-us-east1",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 1024,
            "min_ports_per_vm": 128,
            "name": "dev-fresh-84-nat-us-east1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "1097684345446",
            "region": "us-east1",
            "router": "dev-fresh-84-router-us-east1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_nat.google_compute_router.router",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-03-25T21:07:16.181-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-deny-all-egress",
            "log_config": [],
            "name": "dev-fresh-84-vpc-deny-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 65535,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-deny-all-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-03-25T21:07:26.972-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-deny-all-ingress",
            "log_config": [],
            "name": "dev-fresh-84-vpc-deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 65535,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-monitoring",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9090",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:37.285-07:00",
            "deny": [],
            "description": "Allow Prometheus/Grafana scraping",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-allow-monitoring",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-allow-monitoring",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 950,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-allow-monitoring",
            "source_ranges": [
              "10.0.5.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "monitored"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:37.313-07:00",
            "deny": [],
            "description": "Allow app tier access from web tier",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-app",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-app",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 1000,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-app",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "web-tier"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "app-tier"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "bastion",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:16.198-07:00",
            "deny": [],
            "description": "Allow SSH to bastion hosts",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-bastion",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 1000,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-bastion",
            "source_ranges": [
              "203.0.113.10/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432",
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:27.007-07:00",
            "deny": [],
            "description": "Allow database access from app tier",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-database",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-database",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 1000,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-database",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "app-tier"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "db-tier"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "iap",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:27.191-07:00",
            "deny": [],
            "description": "Allow IAP tunneling",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-iap",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 900,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "iap-enabled"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "internal",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:27.222-07:00",
            "deny": [],
            "description": "Allow internal VPC traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-internal",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 1000,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T21:07:16.173-07:00",
            "deny": [],
            "description": "Allow HTTP/HTTPS to web tier",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/1097684345446/global/firewalls/dev-fresh-84-vpc-web",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-vpc-web",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "priority": 1000,
            "project": "1097684345446",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/firewalls/dev-fresh-84-vpc-web",
            "source_ranges": [
              "198.51.100.0/24",
              "203.0.113.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-tier"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "enabled",
          "schema_version": 0,
          "attributes": {
            "address": "10.126.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-03-25T21:07:16.246-07:00",
            "id": "projects/1097684345446/global/addresses/dev-fresh-84-private-service-access",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "dev-fresh-84-private-service-access",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "prefix_length": 16,
            "project": "1097684345446",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/addresses/dev-fresh-84-private-service-access"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "description": "Managed by Terraform - dev-fresh-84",
            "enable_ula_internal_ipv6": false,
            "id": "projects/1097684345446/global/networks/dev-fresh-84-vpc",
            "mtu": 0,
            "name": "dev-fresh-84-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1875489737362968124",
            "project": "1097684345446",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "api-us-east1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-25T21:07:16.312-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/1097684345446/regions/us-east1/subnetworks/dev-fresh-84-subnet-api-us-east1",
            "ip_cidr_range": "10.0.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-subnet-api-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "1097684345446",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/us-east1/subnetworks/dev-fresh-84-subnet-api-us-east1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "cache-europe-west1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-25T21:07:16.543-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/1097684345446/regions/europe-west1/subnetworks/dev-fresh-84-subnet-cache-europe-west1",
            "ip_cidr_range": "10.0.2.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-subnet-cache-europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "1097684345446",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/europe-west1/subnetworks/dev-fresh-84-subnet-cache-europe-west1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "db-us-central1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-25T21:07:16.177-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/1097684345446/regions/us-central1/subnetworks/dev-fresh-84-subnet-db-us-central1",
            "ip_cidr_range": "10.0.3.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-subnet-db-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "1097684345446",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/us-central1/subnetworks/dev-fresh-84-subnet-db-us-central1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "mgmt-us-east1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-25T21:07:16.225-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/1097684345446/regions/us-east1/subnetworks/dev-fresh-84-subnet-mgmt-us-east1",
            "ip_cidr_range": "10.0.4.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-subnet-mgmt-us-east1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "1097684345446",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/us-east1/subnetworks/dev-fresh-84-subnet-mgmt-us-east1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        },
        {
          "index_key": "web-us-central1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-25T21:07:16.215-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/1097684345446/regions/us-central1/subnetworks/dev-fresh-84-subnet-web-us-central1",
            "ip_cidr_range": "10.0.0.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-fresh-84-subnet-web-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/fresh-84/global/networks/dev-fresh-84-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "1097684345446",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fresh-84/regions/us-central1/subnetworks/dev-fresh-84-subnet-web-us-central1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}